# weather-forecast-mcp

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md
.github/instructions/: testing.instructions.md
src/: error.rs  lib.rs  main.rs  server.rs  tools.rs  transport.rs
src/operations/: alerts.rs  current.rs  forecast.rs  geocode.rs  mod.rs
tests/: mcp_stdio_suite.rs
